# autograd

./: CMakeLists.txt  main.cpp  readme.md
src/: dual.hpp  dynamicLoader.hpp  main.cpp  timer.hpp  ve.hpp
